# Flask-project

./: .gitignore  .secrets  Dockerfile  docker-compose.yaml  fly.toml  pyproject.toml  qwe.txt  requirements.txt  wait_for_pg.sh  wsgi.py
forms/: user.py
migrations/versions/: 0d94f1b22c50_.py  0f5354d8af10_.py  22a1dd288dc0_.py  6572f42b4ba9_.py  835651a39967_.py  87a5e3deecb6_user.py  8840b98ad37f_.py  c7560f9af0f1_initial_migration.py  ce3407bf1e4c_.py  ebd4351dac08_admin_creating.py  f928e86e8d68_.py  ff92edf69ad6_add_email_field_to_user_model.py
newspapper/: .env.example  admin.py  app.py  config.py  example_env
newspapper/api/: __init__.py  article.py  author.py  tag.py  user.py
newspapper/api/permissions/: article.py  user.py
newspapper/forms/: article.py  user.py
newspapper/models/: __init__.py  article.py  tag.py  user.py
newspapper/schemas/: __init__.py  article.py  author.py  user.py
newspapper/static/css/: main.css
newspapper/templates/: base.html  footer.html  heading.html  index.html
newspapper/templates/articles/: details.html  list.html
newspapper/templates/auth/: login.html
newspapper/templates/authors/: list.html
newspapper/templates/news/: list.html
newspapper/templates/users/: details.html  list.html
newspapper/utils/: __init__.py  articles.py  bard.py  news.py
newspapper/views/: articles.py  auth.py  authors.py  bard.py  news.py  users.py
scripts/: user_patch.py
