[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = "Flask werkzeug"
authors = ["kpomak <romka_ne@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "flask_project"}]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^2.2.2"
flask-sqlalchemy = "^3.0.2"

[tool.poetry.group.dev.dependencies]
Flask = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
