[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = "Flask werkzeug"
authors = ["kpomak <romka_ne@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.7"
flask = "1.1.4"
flask-sqlalchemy = "2.5.1"
flask-login = "0.5.0"
flask-migrate = "3.0.0"
python-dotenv = "0.21.0"
psycopg2-binary = "2.8.6"
wtforms = "2.3.3"
email-validator = "1.1.2"
flask-wtf = "0.15.1"
flask-admin = "1.5.8"
werkzeug = "0.16.1"
click = "7.1.2"
flask-combo-jsonapi = "1.0.7"
combojsonapi = "1.1.1"
apispec = "4.7.1"
pyyaml = "5.4.1"
requests = "2.26.0"
markupsafe = "2.0.1"
black = "21.12b0"

[tool.poetry.group.dev.dependencies]
Flask = "1.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
